# comfyui-nodes

./: .gitignore  GEMINI.md  README.md  __init__.py  models.csv  node_templates.json  pyproject.toml  requirements.txt  test_comfyui_router.py
.github/workflows/: publish.yml
example_workflows/: AnimaticToFirstHero.json
nodes/: api_routes.py  deepgen_utils.py  display_node.py  dynamic_models.py  element_node.py  fal_utils.py  i2i10_node.py  i2i3_node.py  i2i_node.py  i2t_node.py  i2v2_node.py  i2v_node.py  i2vr_node.py  image_node.py  llm_node.py  t2i_node.py  t2t_node.py  t2v_node.py  task_nodes.py  task_utils.py  trainer_node.py  upload_multiple_images_node.py  upscaler_node.py  v2v_node.py  v2vr_node.py  video_node.py  video_to_image_node.py  vlm_node.py
user/default/workflows/: Test1.json
web/: deepgen_settings.js  display_node.js  dynamic_image_sockets.js  upload_multiple_images.js
