[project]
name = "deepgen-api"
description = "Custom nodes for using DeepGen API. Video generation, Image generation, Upscaling, LLMs and VLMs."
version = "1.0.12"
license = {file = "LICENSE"}
dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/deepgen-app/ComfyUI-DeepGen-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "deepgen"
DisplayName = "ComfyUI-DeepGen-API"
Icon = ""
