[project]
name = "deepgen-api"
description = "ComfyUI nodes for DeepGen API"
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = ["requests", "opencv-python"]

[project.urls]
Repository = "https://github.com/deepiksdev/ComfyUI-DeepGen-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "deepiksdev"
DisplayName = "ComfyUI-DeepGen-API"
Icon = ""
